cmake_minimum_required(VERSION 3.16)

set(LOGGER_SOURCES Logger.cpp
                   Logger.hpp)

add_library(logger OBJECT ${LOGGER_SOURCES})
target_link_libraries(logger PUBLIC spdlog::spdlog)

if(${TUMEXAM_CLI_LOG_LEVEL} STREQUAL Trace)
    set (TUMEXAM_CLI_LOG_LEVEL TRACE)
    message(STATUS "Using log level Trace")
elseif(${TUMEXAM_CLI_LOG_LEVEL} STREQUAL Debug)
    set (TUMEXAM_CLI_LOG_LEVEL DEBUG)
    message(STATUS "Using log level Debug")
elseif(${TUMEXAM_CLI_LOG_LEVEL} STREQUAL Info)
    set (TUMEXAM_CLI_LOG_LEVEL INFO)
    message(STATUS "Using log level Info")
elseif(${TUMEXAM_CLI_LOG_LEVEL} STREQUAL Warn)
    set (TUMEXAM_CLI_LOG_LEVEL WARN)
    message(STATUS "Using log level Warn")
elseif(${TUMEXAM_CLI_LOG_LEVEL} STREQUAL Error)
    set (TUMEXAM_CLI_LOG_LEVEL ERROR)
    message(STATUS "Using log level Error")
elseif(${TUMEXAM_CLI_LOG_LEVEL} STREQUAL Critical)
    set (TUMEXAM_CLI_LOG_LEVEL CRITICAL)
    message(STATUS "Using log level Critical")
elseif(${TUMEXAM_CLI_LOG_LEVEL} STREQUAL Off)
    set (TUMEXAM_CLI_LOG_LEVEL OFF)
    message(STATUS "Using log level Off")
else()
    if((NOT ${TUMEXAM_CLI_LOG_LEVEL} STREQUAL Default) AND (NOT TUMEXAM_CLI_LOG_LEVEL STREQUAL ""))
        message(WARNING "Log level '${TUMEXAM_CLI_LOG_LEVEL}' unknown, use -DTUMEXAM_CLI_LOG_LEVEL=[Trace, Debug, Info, Warn, Error, Critical, Off, Default]")
    endif()
    set (TUMEXAM_CLI_LOG_LEVEL $<IF:$<CONFIG:Debug>,DEBUG,INFO>)
    message(STATUS "Setting TUMEXAM_CLI_LOG_LEVEL to according to build type")
endif()

target_compile_definitions(logger INTERFACE SPDLOG_ACTIVE_LEVEL=SPDTUMEXAM_CLI_LOG_LEVEL_${TUMEXAM_CLI_LOG_LEVEL})
